
dashboard
======================
NOTE: The dashboard has known display issues in Internet Explorer 6.
* Allowed artifacts to be kept in an arbitrary locations.
* Allowed config.xml to be kept in an arbitrary location
* Can render html/xml/txt in the browser.
* Can display the unit test output for passed builds.
* Enhanced the dashboard to display artifacts directories as tree structure.

general
======================
* Added a the cc-config (http://cc-config.sourceforge.net/) application so that it can be included in the dashboard. Patch by Allan Wick. 


CruiseControl Release Notes - 2.7

dashboard
======================
NOTE: The dashboard has known issues when using it on CruiseControl installations other than the binary
distribution (or the windows installer). There will be a subsequent 2.7.1 release that fixes these issues.
NOTE: The dashboard has known display issues in Internet Explorer 6.
* Initial checkin of new CruiseControl dashboard.
* Tidied the failed and building pages, so that the text is aligned accordingly and does not leak out of the colored box.
* Performance enhancements to the active build page.
* Documentation enhancements, and updated to use newest screenshots.
* Reorganize the modifications tab so that messages are ordered.
* Clarified the administration page so that the difference between the config file location and config file editor is clear.
* Made hyperlinks clearly delineated.
* Fixed issue with refs to default servlet which would break in other web containers.
* Fixed bug with newly added projects reporting incorrect build times.
* Fixed broken link from active build page after build completed.
* Disabled configuration panel for inactive projects.
* CSS commenting to make clearer.
* Created documentation on writing "widgets".
* Enhanced reds and greens on the dashboard to provide a better sense of the state of the entire enterprise.
* Renamed "Last 25 Builds" to "Latest Builds" to more accurate.