@@ -19,10 +19,14 @@ NOTE: The dashboard has known display issues in Internet Explorer 6.
 * Can render html/xml/txt in the browser.
 * Can display the unit test output for passed builds.
 * Enhanced the dashboard to display artifacts directories as tree structure.
+* Added a the cc-config (http://cc-config.sourceforge.net/) application so that it can be included in the dashboard (CC-658). Patch by Allan Wick. 
 
-general
+build loop
 ======================
-* Added a the cc-config (http://cc-config.sourceforge.net/) application so that it can be included in the dashboard. Patch by Allan Wick. 
+
+UCM
+----------------------
+* Fixed ClearCase/UCM mode when rmver event found in history (CC-660). Patch by Paul Heaberlin.
 
 
 CruiseControl Release Notes - 2.7
